can now put new ssh key

--- a/keys.ipynb
+++ b/keys.ipynb
@@ -6,15 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import keys\n",
     "m = keys.KeyManager()"
    ]
   },
@@ -33,7 +25,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str(m.hostlist)"
+    "import ipywidgets as widgets\n",
+    "\n",
+    "selectbox = widgets.SelectMultiple(\n",
+    "    options=m.keys.values()\n",
+    ")\n",
+    "selectbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ak = keys.make_ak(selectbox.value)\n",
+    "print(ak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# m.put_ak(ak)"
    ]
   },
   {
@@ -51,22 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.keysdf()"
+    "m.hostsdf()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
